--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,49 @@ a {
 }
 
 .btn {
-  background-color: rgb(147, 64, 224);
+  background-color: hsl(288, 72%, 36%);
   color: white;
   border-radius: 15px;
-  padding: 0.3rem 1rem;
+  padding: 0.3rem 1.5rem;
+}
+
+.btn:hover {
+  background-color: hsl(288, 72%, 26%);
+
+}
+.btn:active {
+  background-color: hsl(288, 72%, 16%);
+
+}
+.submit-hidden {
+  display: none;
+}
+
+.form-formik {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  margin-top: 3rem;
+}
+
+.form-formik input {
+  border: 0px solid hsl(288, 72%, 36%);
+  border-bottom-width: 1px;
+  font-size: 1.2rem;
+  padding-top: 2rem;
+  padding-bottom: 0.2rem;
+  margin-bottom: 1rem;
+}
+
+input:focus {
+  outline: none;
+}
+input:focus::placeholder {
+  font-size: small;
+  transform: translateY(-100%);
+  transition: transform 0.4s ease-in-out, font-size 0.4s ease-in-out
+}
+
+.error-box {
+  color: crimson
 }
